--- a/src/styles.css
+++ b/src/styles.css
@@ -186,13 +186,34 @@ form {
     font-size: 14px;
 }
 
+.nweet__img {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    display: flex;
+    width: 70%;
+}
+
+.nweet__img:hover {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 .nweet img {
     right: -10px;
     top: 20px;
-    position: absolute;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    /* position: absolute; */
+    width: 100%;
     margin-top: 10px;
 }
 
