nweet details updating...

--- a/src/styles.css
+++ b/src/styles.css
@@ -142,12 +142,12 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .factoryForm__attachment img {
-    height: 80px;
-    width: 80px;
-    border-radius: 40px;
+    width: 100%;
+    height: auto;
 }
 
 .factoryForm__clear {
@@ -199,6 +199,7 @@ form {
     transition: 0.3s;
     display: flex;
     width: 70%;
+    height: 100%;
 }
 
 .nweet__img:hover {
@@ -210,11 +211,9 @@ form {
 }
 
 .nweet img {
-    right: -10px;
-    top: 20px;
-    /* position: absolute; */
-    width: 100%;
     margin-top: 10px;
+    width: 100%;
+    height: 100%;
 }
 
 .nweet__actions {
