Posting Features Updated

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import "https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css";
+@import 'reset.css';
 
 input {
     all: unset;
@@ -89,14 +89,16 @@ form {
 
 .factoryForm {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
     width: 100%;
 }
 
 .factoryInput__container {
     display: flex;
-    justify-content: space-between;
+    
+    flex-direction:column;
+    justify-content:stretch;
     align-items: center;
     flex-wrap: wrap;
     position: relative;
@@ -104,9 +106,23 @@ form {
     width: 100%;
 }
 
-.factoryInput__input {
+.factoryInput__title{
     flex-grow: 1;
     height: 40px;
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 0px 20px;
+    color: white;
+    border: 1px solid #ccc;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.factoryInput__content {
+    flex-grow: 1;
+    height: 200px;
+    width: 85%;
+    margin-top: 20px;
     padding: 0px 20px;
     color: white;
     border: 1px solid #04aaff;
@@ -116,16 +132,20 @@ form {
 }
 
 .factoryInput__arrow {
-    position: absolute;
-    right: 0;
+    margin: 20px 0 50px 0;
     background-color: #04aaff;
     height: 40px;
-    width: 40px;
+    width: 100px;
     padding: 10px 0px;
+    font-size: 18px;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 30px;
     color: white;
     box-sizing: border-box;
+}
+
+.factoryInput__arrow:hover {
+    cursor: pointer;
 }
 
 .factoryInput__label {
@@ -300,3 +320,40 @@ form {
     font-size: 14px;
     text-decoration: underline;
 }
+
+.center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.post__desc{
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.post__desc img{
+    max-width: 50%;
+}
+
+.factoryInput__link{
+    text-align: center;
+    background-color: #04aaff;
+    height: 35px;
+    width: 85px;
+    padding: 10px 0px;
+    font-size: 15px;
+    text-align: center;
+    border-radius: 30px;
+    color: white;
+    box-sizing: border-box;
+}
+
+.post__title {
+    width: 100%;
+    font-size: 30px;
+    font-weight: 500;
+    display: block;
+}
+
+div {display:block}
